2015-12-05 master
- Enhancements:
  - Support for NETWM viewports (as in Compiz) (issue #94)
  - New plugin: executor
2015-11-12 0.12.3
- Enhancements:
  - Battery: Multiple batteries are now supported under Linux (issue #139;
    thanks to Sebastian Reichel)
  - Battery: The time left for charging/discharging the battery is now estimated
    when the system is not able to read current data from sensors (issue #522;
    thanks to Sebastian Reichel)
  - Battery: Reacts to plug/unplug events (thanks to Sebastian Reichel)
  - tint2conf: Backgrounds now have a text label showing which panel component
    uses them, to make them easier to identify; the label is saved as a comment
    in the config file (issue #521)
- New config options:
  - Mouse over effects (mouse_effects, background_color_hover, border_color_hover)
  - Launcher icon background (launcher_icon_background_id)
  - Enable/disable battery tooltips (battery_tooltip_enabled)
- Fixes:
  - Updated French translation
  - The correct icon is now used in tint2.desktop (issue #523)
  - The font setting for the desktop name is no longer lost on tint2 restart
2015-08-11 0.12.2
- Fixes:
  - Systray: do not move empty icons to the side, as it breaks GTK2 StatusIcon blinking (issue #515)
  - tint2conf: Fix read of panel_monitor (issue #520)
  - Fix command line argument processing (issue #516)
  - Fix battery option parsing
2015-08-01 0.12.1
- Fixes:
  - Config:
	- Read config correctly when panel_items is at the end of the config file (issue #511)
  - Panel:
	- Do not use nested event loops (related: issue #509)
  - System tray:
	- Set _NET_SYSTEM_TRAY_ICON_SIZE and _NET_SYSTEM_TRAY_PADDING
	- Throttle repeated resizes (workaround for issue #509)
  - Taskbar:
	- Use consistent visibility for sticky (all desktop) windows (related: issue #279)
	- Compute monitor correctly for windows when Openbox animations are enabled (issue #511)
  - tint2conf:
	- Bad read of option panel_margin
- New config options: