@@ -749,6 +749,10 @@ void add_entry(char *key, char *value)
 			taskbar_sort_method = TASKBAR_SORT_CENTER;
 		} else if (strcmp(value, "title") == 0) {
 			taskbar_sort_method = TASKBAR_SORT_TITLE;
+		} else if (strcmp(value, "lru") == 0) {
+			taskbar_sort_method = TASKBAR_SORT_LRU;
+		} else if (strcmp(value, "mru") == 0) {
+			taskbar_sort_method = TASKBAR_SORT_MRU;
 		} else {
 			taskbar_sort_method = TASKBAR_NOSORT;
 		}
