@@ -21,6 +21,8 @@ typedef enum TaskbarSortMethod {
 	TASKBAR_NOSORT = 0,
 	TASKBAR_SORT_CENTER,
 	TASKBAR_SORT_TITLE,
+	TASKBAR_SORT_LRU,
+	TASKBAR_SORT_MRU,
 } TaskbarSortMethod;
 
 extern GHashTable *win_to_task;
