@@ -2,6 +2,7 @@
 - Enhancements:
   - Support for NETWM viewports (as in Compiz) (issue #94)
   - New plugin: executor
+  - New taskbar sort order: least-recently-used (lru), most-recently-used (mru)
 2015-11-12 0.12.3
 - Enhancements:
   - Battery: Multiple batteries are now supported under Linux (issue #139;
